// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusMessagesNavItem no messages 1`] = `
<StatusMessagesNavItem
  fetchMessages={[Function]}
  history="[History]"
  isSiteAdmin={false}
>
  <Menu>
    <DescendantProvider
      context={
        Object {
          "$$typeof": Symbol(react.context),
          "Consumer": Object {
            "$$typeof": Symbol(react.context),
            "_calculateChangedBits": null,
            "_context": [Circular],
          },
          "Provider": Object {
            "$$typeof": Symbol(react.provider),
            "_context": [Circular],
          },
          "_calculateChangedBits": null,
          "_currentRenderer": Object {},
          "_currentRenderer2": null,
          "_currentValue": Object {
            "descendants": Array [],
            "registerDescendant": [Function],
            "unregisterDescendant": [Function],
          },
          "_currentValue2": Object {
            "descendants": Array [],
            "registerDescendant": [Function],
            "unregisterDescendant": [Function],
          },
          "_threadCount": 0,
          "displayName": "MenuDescendantContext",
        }
      }
      items={Array []}
      set={[Function]}
    >
      <div
        className="nav-link py-0 px-0 status-messages-nav-item__nav-link"
      >
        <MenuButton
          className="btn btn-link"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <button
            aria-controls="menu--1"
            aria-haspopup={true}
            className="btn btn-link"
            data-reach-menu-button=""
            id="menu-button--menu--1"
            onClick={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            type="button"
          >
            <CloudCheckIcon
              className="icon-inline"
              data-tooltip="Repositories up to date"
            />
          </button>
        </MenuButton>
        <MenuPopover
          className="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
        >
          <Popover
            className="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
            data-reach-menu=""
            data-reach-menu-popover=""
            hidden={true}
            targetRef={
              Object {
                "current": <button
                  aria-controls="menu--1"
                  aria-haspopup="true"
                  class="btn btn-link"
                  data-reach-menu-button=""
                  id="menu-button--menu--1"
                  type="button"
                >
                  <cloudcheckicon
                    class="icon-inline"
                    data-tooltip="Repositories up to date"
                  />
                </button>,
              }
            }
          >
            <Portal>
              <Portal
                containerInfo={
                  <reach-portal>
                    <div
                      class="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
                      data-reach-menu=""
                      data-reach-menu-popover=""
                      data-reach-popover=""
                      hidden=""
                      style="position: absolute; left: 0px; top: 0px;"
                    >
                      <h3>
                        Code host status
                      </h3>
                      <div
                        class="status-messages-nav-item__dropdown-menu-content"
                      >
                        <div
                          class="status-messages-nav-item__entry mb-3 status-messages-nav-item__entry--border-success"
                        >
                          <h4>
                            <cloudcheckicon
                              class="icon-inline mr-1"
                            />
                            Repositories up to date
                          </h4>
                          <p>
                            All repositories hosted on the configured code hosts are synced.
                          </p>
                        </div>
                      </div>
                    </div>
                  </reach-portal>
                }
              >
                <PopoverImpl
                  className="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
                  data-reach-menu=""
                  data-reach-menu-popover=""
                  hidden={true}
                  targetRef={
                    Object {
                      "current": <button
                        aria-controls="menu--1"
                        aria-haspopup="true"
                        class="btn btn-link"
                        data-reach-menu-button=""
                        id="menu-button--menu--1"
                        type="button"
                      >
                        <cloudcheckicon
                          class="icon-inline"
                          data-tooltip="Repositories up to date"
                        />
                      </button>,
                    }
                  }
                >
                  <div
                    className="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
                    data-reach-menu=""
                    data-reach-menu-popover=""
                    data-reach-popover=""
                    hidden={true}
                    style={
                      Object {
                        "left": "0px",
                        "position": "absolute",
                        "top": "0px",
                      }
                    }
                  >
                    <h3>
                      Code host status
                    </h3>
                    <div
                      className="status-messages-nav-item__dropdown-menu-content"
                    >
                      <StatusMessagesNavItemEntry
                        entryType="success"
                        linkOnClick={[Function]}
                        linkText="Manage repositories"
                        linkTo="/site-admin/external-services"
                        showLink={false}
                        text="All repositories hosted on the configured code hosts are synced."
                        title="Repositories up to date"
                      >
                        <div
                          className="status-messages-nav-item__entry mb-3 status-messages-nav-item__entry--border-success"
                          key="All repositories hosted on the configured code hosts are synced."
                        >
                          <h4>
                            <CloudCheckIcon
                              className="icon-inline mr-1"
                            />
                            Repositories up to date
                          </h4>
                          <p>
                            All repositories hosted on the configured code hosts are synced.
                          </p>
                        </div>
                      </StatusMessagesNavItemEntry>
                    </div>
                  </div>
                </PopoverImpl>
              </Portal>
            </Portal>
          </Popover>
        </MenuPopover>
      </div>
    </DescendantProvider>
  </Menu>
</StatusMessagesNavItem>
`;

exports[`StatusMessagesNavItem one CloningProgress message as non-site admin 1`] = `
<StatusMessagesNavItem
  fetchMessages={[Function]}
  history="[History]"
  isSiteAdmin={false}
>
  <Menu>
    <DescendantProvider
      context={
        Object {
          "$$typeof": Symbol(react.context),
          "Consumer": Object {
            "$$typeof": Symbol(react.context),
            "_calculateChangedBits": null,
            "_context": [Circular],
          },
          "Provider": Object {
            "$$typeof": Symbol(react.provider),
            "_context": [Circular],
          },
          "_calculateChangedBits": null,
          "_currentRenderer": Object {},
          "_currentRenderer2": null,
          "_currentValue": Object {
            "descendants": Array [],
            "registerDescendant": [Function],
            "unregisterDescendant": [Function],
          },
          "_currentValue2": Object {
            "descendants": Array [],
            "registerDescendant": [Function],
            "unregisterDescendant": [Function],
          },
          "_threadCount": 0,
          "displayName": "MenuDescendantContext",
        }
      }
      items={Array []}
      set={[Function]}
    >
      <div
        className="nav-link py-0 px-0 status-messages-nav-item__nav-link"
      >
        <MenuButton
          className="btn btn-link"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <button
            aria-controls="menu--4"
            aria-haspopup={true}
            className="btn btn-link"
            data-reach-menu-button=""
            id="menu-button--menu--4"
            onClick={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            type="button"
          >
            <CloudSyncIcon
              className="icon-inline"
              data-tooltip="Cloning repositories..."
            />
          </button>
        </MenuButton>
        <MenuPopover
          className="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
        >
          <Popover
            className="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
            data-reach-menu=""
            data-reach-menu-popover=""
            hidden={true}
            targetRef={
              Object {
                "current": <button
                  aria-controls="menu--4"
                  aria-haspopup="true"
                  class="btn btn-link"
                  data-reach-menu-button=""
                  id="menu-button--menu--4"
                  type="button"
                >
                  <cloudsyncicon
                    class="icon-inline"
                    data-tooltip="Cloning repositories..."
                  />
                </button>,
              }
            }
          >
            <Portal>
              <Portal
                containerInfo={
                  <reach-portal>
                    <div
                      class="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
                      data-reach-menu=""
                      data-reach-menu-popover=""
                      data-reach-popover=""
                      hidden=""
                      style="position: absolute; left: 0px; top: 0px;"
                    >
                      <h3>
                        Code host status
                      </h3>
                      <div
                        class="status-messages-nav-item__dropdown-menu-content"
                      >
                        <div
                          class="status-messages-nav-item__entry mb-3 status-messages-nav-item__entry--border-progress"
                        >
                          <h4>
                            <cloudsyncicon
                              class="icon-inline mr-1"
                            />
                            Repositories cloning
                          </h4>
                          <p>
                            Currently cloning repositories...
                          </p>
                        </div>
                      </div>
                    </div>
                  </reach-portal>
                }
              >
                <PopoverImpl
                  className="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
                  data-reach-menu=""
                  data-reach-menu-popover=""
                  hidden={true}
                  targetRef={
                    Object {
                      "current": <button
                        aria-controls="menu--4"
                        aria-haspopup="true"
                        class="btn btn-link"
                        data-reach-menu-button=""
                        id="menu-button--menu--4"
                        type="button"
                      >
                        <cloudsyncicon
                          class="icon-inline"
                          data-tooltip="Cloning repositories..."
                        />
                      </button>,
                    }
                  }
                >
                  <div
                    className="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
                    data-reach-menu=""
                    data-reach-menu-popover=""
                    data-reach-popover=""
                    hidden={true}
                    style={
                      Object {
                        "left": "0px",
                        "position": "absolute",
                        "top": "0px",
                      }
                    }
                  >
                    <h3>
                      Code host status
                    </h3>
                    <div
                      className="status-messages-nav-item__dropdown-menu-content"
                    >
                      <StatusMessagesNavItemEntry
                        entryType="progress"
                        key="0"
                        linkOnClick={[Function]}
                        linkText="Configure synced repositories"
                        linkTo="/site-admin/external-services"
                        showLink={false}
                        text="Currently cloning repositories..."
                        title="Repositories cloning"
                      >
                        <div
                          className="status-messages-nav-item__entry mb-3 status-messages-nav-item__entry--border-progress"
                          key="Currently cloning repositories..."
                        >
                          <h4>
                            <CloudSyncIcon
                              className="icon-inline mr-1"
                            />
                            Repositories cloning
                          </h4>
                          <p>
                            Currently cloning repositories...
                          </p>
                        </div>
                      </StatusMessagesNavItemEntry>
                    </div>
                  </div>
                </PopoverImpl>
              </Portal>
            </Portal>
          </Popover>
        </MenuPopover>
      </div>
    </DescendantProvider>
  </Menu>
</StatusMessagesNavItem>
`;

exports[`StatusMessagesNavItem one CloningProgress message as site admin 1`] = `
<StatusMessagesNavItem
  fetchMessages={[Function]}
  history="[History]"
  isSiteAdmin={true}
>
  <Menu>
    <DescendantProvider
      context={
        Object {
          "$$typeof": Symbol(react.context),
          "Consumer": Object {
            "$$typeof": Symbol(react.context),
            "_calculateChangedBits": null,
            "_context": [Circular],
          },
          "Provider": Object {
            "$$typeof": Symbol(react.provider),
            "_context": [Circular],
          },
          "_calculateChangedBits": null,
          "_currentRenderer": Object {},
          "_currentRenderer2": null,
          "_currentValue": Object {
            "descendants": Array [],
            "registerDescendant": [Function],
            "unregisterDescendant": [Function],
          },
          "_currentValue2": Object {
            "descendants": Array [],
            "registerDescendant": [Function],
            "unregisterDescendant": [Function],
          },
          "_threadCount": 0,
          "displayName": "MenuDescendantContext",
        }
      }
      items={Array []}
      set={[Function]}
    >
      <div
        className="nav-link py-0 px-0 status-messages-nav-item__nav-link"
      >
        <MenuButton
          className="btn btn-link"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <button
            aria-controls="menu--6"
            aria-haspopup={true}
            className="btn btn-link"
            data-reach-menu-button=""
            id="menu-button--menu--6"
            onClick={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            type="button"
          >
            <CloudSyncIcon
              className="icon-inline"
              data-tooltip="Cloning repositories..."
            />
          </button>
        </MenuButton>
        <MenuPopover
          className="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
        >
          <Popover
            className="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
            data-reach-menu=""
            data-reach-menu-popover=""
            hidden={true}
            targetRef={
              Object {
                "current": <button
                  aria-controls="menu--6"
                  aria-haspopup="true"
                  class="btn btn-link"
                  data-reach-menu-button=""
                  id="menu-button--menu--6"
                  type="button"
                >
                  <cloudsyncicon
                    class="icon-inline"
                    data-tooltip="Cloning repositories..."
                  />
                </button>,
              }
            }
          >
            <Portal>
              <Portal
                containerInfo={
                  <reach-portal>
                    <div
                      class="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
                      data-reach-menu=""
                      data-reach-menu-popover=""
                      data-reach-popover=""
                      hidden=""
                      style="position: absolute; left: 0px; top: 0px;"
                    >
                      <h3>
                        Code host status
                      </h3>
                      <div
                        class="status-messages-nav-item__dropdown-menu-content"
                      >
                        <div
                          class="status-messages-nav-item__entry mb-3 status-messages-nav-item__entry--border-progress"
                        >
                          <h4>
                            <cloudsyncicon
                              class="icon-inline mr-1"
                            />
                            Repositories cloning
                          </h4>
                          <p>
                            Currently cloning repositories...
                          </p>
                          <p
                            class="status-messages-nav-item__entry-link"
                          >
                            <a
                              href="/site-admin/external-services"
                            >
                              Configure synced repositories
                            </a>
                          </p>
                        </div>
                      </div>
                    </div>
                  </reach-portal>
                }
              >
                <PopoverImpl
                  className="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
                  data-reach-menu=""
                  data-reach-menu-popover=""
                  hidden={true}
                  targetRef={
                    Object {
                      "current": <button
                        aria-controls="menu--6"
                        aria-haspopup="true"
                        class="btn btn-link"
                        data-reach-menu-button=""
                        id="menu-button--menu--6"
                        type="button"
                      >
                        <cloudsyncicon
                          class="icon-inline"
                          data-tooltip="Cloning repositories..."
                        />
                      </button>,
                    }
                  }
                >
                  <div
                    className="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
                    data-reach-menu=""
                    data-reach-menu-popover=""
                    data-reach-popover=""
                    hidden={true}
                    style={
                      Object {
                        "left": "0px",
                        "position": "absolute",
                        "top": "0px",
                      }
                    }
                  >
                    <h3>
                      Code host status
                    </h3>
                    <div
                      className="status-messages-nav-item__dropdown-menu-content"
                    >
                      <StatusMessagesNavItemEntry
                        entryType="progress"
                        key="0"
                        linkOnClick={[Function]}
                        linkText="Configure synced repositories"
                        linkTo="/site-admin/external-services"
                        showLink={true}
                        text="Currently cloning repositories..."
                        title="Repositories cloning"
                      >
                        <div
                          className="status-messages-nav-item__entry mb-3 status-messages-nav-item__entry--border-progress"
                          key="Currently cloning repositories..."
                        >
                          <h4>
                            <CloudSyncIcon
                              className="icon-inline mr-1"
                            />
                            Repositories cloning
                          </h4>
                          <p>
                            Currently cloning repositories...
                          </p>
                          <p
                            className="status-messages-nav-item__entry-link"
                          >
                            <AnchorLink
                              onClick={[Function]}
                              to="/site-admin/external-services"
                            >
                              <a
                                href="/site-admin/external-services"
                                onClick={[Function]}
                              >
                                Configure synced repositories
                              </a>
                            </AnchorLink>
                          </p>
                        </div>
                      </StatusMessagesNavItemEntry>
                    </div>
                  </div>
                </PopoverImpl>
              </Portal>
            </Portal>
          </Popover>
        </MenuPopover>
      </div>
    </DescendantProvider>
  </Menu>
</StatusMessagesNavItem>
`;

exports[`StatusMessagesNavItem one ExternalServiceSyncError message as non-site admin 1`] = `
<StatusMessagesNavItem
  fetchMessages={[Function]}
  history="[History]"
  isSiteAdmin={false}
>
  <Menu>
    <DescendantProvider
      context={
        Object {
          "$$typeof": Symbol(react.context),
          "Consumer": Object {
            "$$typeof": Symbol(react.context),
            "_calculateChangedBits": null,
            "_context": [Circular],
          },
          "Provider": Object {
            "$$typeof": Symbol(react.provider),
            "_context": [Circular],
          },
          "_calculateChangedBits": null,
          "_currentRenderer": Object {},
          "_currentRenderer2": null,
          "_currentValue": Object {
            "descendants": Array [],
            "registerDescendant": [Function],
            "unregisterDescendant": [Function],
          },
          "_currentValue2": Object {
            "descendants": Array [],
            "registerDescendant": [Function],
            "unregisterDescendant": [Function],
          },
          "_threadCount": 0,
          "displayName": "MenuDescendantContext",
        }
      }
      items={Array []}
      set={[Function]}
    >
      <div
        className="nav-link py-0 px-0 status-messages-nav-item__nav-link"
      >
        <MenuButton
          className="btn btn-link"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <button
            aria-controls="menu--8"
            aria-haspopup={true}
            className="btn btn-link"
            data-reach-menu-button=""
            id="menu-button--menu--8"
            onClick={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            type="button"
          >
            <CloudAlertIcon
              className="icon-inline"
              data-tooltip="Syncing repositories failed!"
            />
          </button>
        </MenuButton>
        <MenuPopover
          className="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
        >
          <Popover
            className="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
            data-reach-menu=""
            data-reach-menu-popover=""
            hidden={true}
            targetRef={
              Object {
                "current": <button
                  aria-controls="menu--8"
                  aria-haspopup="true"
                  class="btn btn-link"
                  data-reach-menu-button=""
                  id="menu-button--menu--8"
                  type="button"
                >
                  <cloudalerticon
                    class="icon-inline"
                    data-tooltip="Syncing repositories failed!"
                  />
                </button>,
              }
            }
          >
            <Portal>
              <Portal
                containerInfo={
                  <reach-portal>
                    <div
                      class="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
                      data-reach-menu=""
                      data-reach-menu-popover=""
                      data-reach-popover=""
                      hidden=""
                      style="position: absolute; left: 0px; top: 0px;"
                    >
                      <h3>
                        Code host status
                      </h3>
                      <div
                        class="status-messages-nav-item__dropdown-menu-content"
                      >
                        <div
                          class="status-messages-nav-item__entry mb-3 status-messages-nav-item__entry--border-warning"
                        >
                          <h4>
                            <cloudalerticon
                              class="icon-inline mr-1"
                            />
                            Syncing repositories from external service "GitHub.com" failed:
                          </h4>
                          <p>
                            failed to list organization kubernetes repos: request returned status 404: Not Found
                          </p>
                        </div>
                      </div>
                    </div>
                  </reach-portal>
                }
              >
                <PopoverImpl
                  className="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
                  data-reach-menu=""
                  data-reach-menu-popover=""
                  hidden={true}
                  targetRef={
                    Object {
                      "current": <button
                        aria-controls="menu--8"
                        aria-haspopup="true"
                        class="btn btn-link"
                        data-reach-menu-button=""
                        id="menu-button--menu--8"
                        type="button"
                      >
                        <cloudalerticon
                          class="icon-inline"
                          data-tooltip="Syncing repositories failed!"
                        />
                      </button>,
                    }
                  }
                >
                  <div
                    className="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
                    data-reach-menu=""
                    data-reach-menu-popover=""
                    data-reach-popover=""
                    hidden={true}
                    style={
                      Object {
                        "left": "0px",
                        "position": "absolute",
                        "top": "0px",
                      }
                    }
                  >
                    <h3>
                      Code host status
                    </h3>
                    <div
                      className="status-messages-nav-item__dropdown-menu-content"
                    >
                      <StatusMessagesNavItemEntry
                        entryType="warning"
                        key="0"
                        linkOnClick={[Function]}
                        linkText="Edit \\"GitHub.com\\""
                        linkTo="/site-admin/external-services/abcd"
                        showLink={false}
                        text="failed to list organization kubernetes repos: request returned status 404: Not Found"
                        title="Syncing repositories from external service \\"GitHub.com\\" failed:"
                      >
                        <div
                          className="status-messages-nav-item__entry mb-3 status-messages-nav-item__entry--border-warning"
                          key="failed to list organization kubernetes repos: request returned status 404: Not Found"
                        >
                          <h4>
                            <CloudAlertIcon
                              className="icon-inline mr-1"
                            />
                            Syncing repositories from external service "GitHub.com" failed:
                          </h4>
                          <p>
                            failed to list organization kubernetes repos: request returned status 404: Not Found
                          </p>
                        </div>
                      </StatusMessagesNavItemEntry>
                    </div>
                  </div>
                </PopoverImpl>
              </Portal>
            </Portal>
          </Popover>
        </MenuPopover>
      </div>
    </DescendantProvider>
  </Menu>
</StatusMessagesNavItem>
`;

exports[`StatusMessagesNavItem one ExternalServiceSyncError message as site admin 1`] = `
<StatusMessagesNavItem
  fetchMessages={[Function]}
  history="[History]"
  isSiteAdmin={true}
>
  <Menu>
    <DescendantProvider
      context={
        Object {
          "$$typeof": Symbol(react.context),
          "Consumer": Object {
            "$$typeof": Symbol(react.context),
            "_calculateChangedBits": null,
            "_context": [Circular],
          },
          "Provider": Object {
            "$$typeof": Symbol(react.provider),
            "_context": [Circular],
          },
          "_calculateChangedBits": null,
          "_currentRenderer": Object {},
          "_currentRenderer2": null,
          "_currentValue": Object {
            "descendants": Array [],
            "registerDescendant": [Function],
            "unregisterDescendant": [Function],
          },
          "_currentValue2": Object {
            "descendants": Array [],
            "registerDescendant": [Function],
            "unregisterDescendant": [Function],
          },
          "_threadCount": 0,
          "displayName": "MenuDescendantContext",
        }
      }
      items={Array []}
      set={[Function]}
    >
      <div
        className="nav-link py-0 px-0 status-messages-nav-item__nav-link"
      >
        <MenuButton
          className="btn btn-link"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <button
            aria-controls="menu--10"
            aria-haspopup={true}
            className="btn btn-link"
            data-reach-menu-button=""
            id="menu-button--menu--10"
            onClick={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            type="button"
          >
            <CloudAlertIcon
              className="icon-inline"
              data-tooltip="Syncing repositories failed!"
            />
          </button>
        </MenuButton>
        <MenuPopover
          className="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
        >
          <Popover
            className="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
            data-reach-menu=""
            data-reach-menu-popover=""
            hidden={true}
            targetRef={
              Object {
                "current": <button
                  aria-controls="menu--10"
                  aria-haspopup="true"
                  class="btn btn-link"
                  data-reach-menu-button=""
                  id="menu-button--menu--10"
                  type="button"
                >
                  <cloudalerticon
                    class="icon-inline"
                    data-tooltip="Syncing repositories failed!"
                  />
                </button>,
              }
            }
          >
            <Portal>
              <Portal
                containerInfo={
                  <reach-portal>
                    <div
                      class="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
                      data-reach-menu=""
                      data-reach-menu-popover=""
                      data-reach-popover=""
                      hidden=""
                      style="position: absolute; left: 0px; top: 0px;"
                    >
                      <h3>
                        Code host status
                      </h3>
                      <div
                        class="status-messages-nav-item__dropdown-menu-content"
                      >
                        <div
                          class="status-messages-nav-item__entry mb-3 status-messages-nav-item__entry--border-warning"
                        >
                          <h4>
                            <cloudalerticon
                              class="icon-inline mr-1"
                            />
                            Syncing repositories from external service "GitHub.com" failed:
                          </h4>
                          <p>
                            failed to list organization kubernetes repos: request returned status 404: Not Found
                          </p>
                          <p
                            class="status-messages-nav-item__entry-link"
                          >
                            <a
                              href="/site-admin/external-services/abcd"
                            >
                              Edit "GitHub.com"
                            </a>
                          </p>
                        </div>
                      </div>
                    </div>
                  </reach-portal>
                }
              >
                <PopoverImpl
                  className="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
                  data-reach-menu=""
                  data-reach-menu-popover=""
                  hidden={true}
                  targetRef={
                    Object {
                      "current": <button
                        aria-controls="menu--10"
                        aria-haspopup="true"
                        class="btn btn-link"
                        data-reach-menu-button=""
                        id="menu-button--menu--10"
                        type="button"
                      >
                        <cloudalerticon
                          class="icon-inline"
                          data-tooltip="Syncing repositories failed!"
                        />
                      </button>,
                    }
                  }
                >
                  <div
                    className="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
                    data-reach-menu=""
                    data-reach-menu-popover=""
                    data-reach-popover=""
                    hidden={true}
                    style={
                      Object {
                        "left": "0px",
                        "position": "absolute",
                        "top": "0px",
                      }
                    }
                  >
                    <h3>
                      Code host status
                    </h3>
                    <div
                      className="status-messages-nav-item__dropdown-menu-content"
                    >
                      <StatusMessagesNavItemEntry
                        entryType="warning"
                        key="0"
                        linkOnClick={[Function]}
                        linkText="Edit \\"GitHub.com\\""
                        linkTo="/site-admin/external-services/abcd"
                        showLink={true}
                        text="failed to list organization kubernetes repos: request returned status 404: Not Found"
                        title="Syncing repositories from external service \\"GitHub.com\\" failed:"
                      >
                        <div
                          className="status-messages-nav-item__entry mb-3 status-messages-nav-item__entry--border-warning"
                          key="failed to list organization kubernetes repos: request returned status 404: Not Found"
                        >
                          <h4>
                            <CloudAlertIcon
                              className="icon-inline mr-1"
                            />
                            Syncing repositories from external service "GitHub.com" failed:
                          </h4>
                          <p>
                            failed to list organization kubernetes repos: request returned status 404: Not Found
                          </p>
                          <p
                            className="status-messages-nav-item__entry-link"
                          >
                            <AnchorLink
                              onClick={[Function]}
                              to="/site-admin/external-services/abcd"
                            >
                              <a
                                href="/site-admin/external-services/abcd"
                                onClick={[Function]}
                              >
                                Edit "GitHub.com"
                              </a>
                            </AnchorLink>
                          </p>
                        </div>
                      </StatusMessagesNavItemEntry>
                    </div>
                  </div>
                </PopoverImpl>
              </Portal>
            </Portal>
          </Popover>
        </MenuPopover>
      </div>
    </DescendantProvider>
  </Menu>
</StatusMessagesNavItem>
`;

exports[`StatusMessagesNavItem one SyncError message as non-site admin 1`] = `
<StatusMessagesNavItem
  fetchMessages={[Function]}
  history="[History]"
  isSiteAdmin={false}
>
  <Menu>
    <DescendantProvider
      context={
        Object {
          "$$typeof": Symbol(react.context),
          "Consumer": Object {
            "$$typeof": Symbol(react.context),
            "_calculateChangedBits": null,
            "_context": [Circular],
          },
          "Provider": Object {
            "$$typeof": Symbol(react.provider),
            "_context": [Circular],
          },
          "_calculateChangedBits": null,
          "_currentRenderer": Object {},
          "_currentRenderer2": null,
          "_currentValue": Object {
            "descendants": Array [],
            "registerDescendant": [Function],
            "unregisterDescendant": [Function],
          },
          "_currentValue2": Object {
            "descendants": Array [],
            "registerDescendant": [Function],
            "unregisterDescendant": [Function],
          },
          "_threadCount": 0,
          "displayName": "MenuDescendantContext",
        }
      }
      items={Array []}
      set={[Function]}
    >
      <div
        className="nav-link py-0 px-0 status-messages-nav-item__nav-link"
      >
        <MenuButton
          className="btn btn-link"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <button
            aria-controls="menu--12"
            aria-haspopup={true}
            className="btn btn-link"
            data-reach-menu-button=""
            id="menu-button--menu--12"
            onClick={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            type="button"
          >
            <CloudCheckIcon
              className="icon-inline"
              data-tooltip="Repositories up to date"
            />
          </button>
        </MenuButton>
        <MenuPopover
          className="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
        >
          <Popover
            className="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
            data-reach-menu=""
            data-reach-menu-popover=""
            hidden={true}
            targetRef={
              Object {
                "current": <button
                  aria-controls="menu--12"
                  aria-haspopup="true"
                  class="btn btn-link"
                  data-reach-menu-button=""
                  id="menu-button--menu--12"
                  type="button"
                >
                  <cloudcheckicon
                    class="icon-inline"
                    data-tooltip="Repositories up to date"
                  />
                </button>,
              }
            }
          >
            <Portal>
              <Portal
                containerInfo={
                  <reach-portal>
                    <div
                      class="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
                      data-reach-menu=""
                      data-reach-menu-popover=""
                      data-reach-popover=""
                      hidden=""
                      style="position: absolute; left: 0px; top: 0px;"
                    >
                      <h3>
                        Code host status
                      </h3>
                      <div
                        class="status-messages-nav-item__dropdown-menu-content"
                      >
                        <div
                          class="status-messages-nav-item__entry mb-3 status-messages-nav-item__entry--border-warning"
                        >
                          <h4>
                            <cloudalerticon
                              class="icon-inline mr-1"
                            />
                            Syncing repositories failed:
                          </h4>
                          <p>
                            syncer.sync.store.upsert-repos: pg: unique constraint foobar
                          </p>
                        </div>
                      </div>
                    </div>
                  </reach-portal>
                }
              >
                <PopoverImpl
                  className="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
                  data-reach-menu=""
                  data-reach-menu-popover=""
                  hidden={true}
                  targetRef={
                    Object {
                      "current": <button
                        aria-controls="menu--12"
                        aria-haspopup="true"
                        class="btn btn-link"
                        data-reach-menu-button=""
                        id="menu-button--menu--12"
                        type="button"
                      >
                        <cloudcheckicon
                          class="icon-inline"
                          data-tooltip="Repositories up to date"
                        />
                      </button>,
                    }
                  }
                >
                  <div
                    className="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
                    data-reach-menu=""
                    data-reach-menu-popover=""
                    data-reach-popover=""
                    hidden={true}
                    style={
                      Object {
                        "left": "0px",
                        "position": "absolute",
                        "top": "0px",
                      }
                    }
                  >
                    <h3>
                      Code host status
                    </h3>
                    <div
                      className="status-messages-nav-item__dropdown-menu-content"
                    >
                      <StatusMessagesNavItemEntry
                        entryType="warning"
                        key="0"
                        linkOnClick={[Function]}
                        linkText="Configure synced repositories"
                        linkTo="/site-admin/external-services"
                        showLink={false}
                        text="syncer.sync.store.upsert-repos: pg: unique constraint foobar"
                        title="Syncing repositories failed:"
                      >
                        <div
                          className="status-messages-nav-item__entry mb-3 status-messages-nav-item__entry--border-warning"
                          key="syncer.sync.store.upsert-repos: pg: unique constraint foobar"
                        >
                          <h4>
                            <CloudAlertIcon
                              className="icon-inline mr-1"
                            />
                            Syncing repositories failed:
                          </h4>
                          <p>
                            syncer.sync.store.upsert-repos: pg: unique constraint foobar
                          </p>
                        </div>
                      </StatusMessagesNavItemEntry>
                    </div>
                  </div>
                </PopoverImpl>
              </Portal>
            </Portal>
          </Popover>
        </MenuPopover>
      </div>
    </DescendantProvider>
  </Menu>
</StatusMessagesNavItem>
`;

exports[`StatusMessagesNavItem one SyncError message as site admin 1`] = `
<StatusMessagesNavItem
  fetchMessages={[Function]}
  history="[History]"
  isSiteAdmin={true}
>
  <Menu>
    <DescendantProvider
      context={
        Object {
          "$$typeof": Symbol(react.context),
          "Consumer": Object {
            "$$typeof": Symbol(react.context),
            "_calculateChangedBits": null,
            "_context": [Circular],
          },
          "Provider": Object {
            "$$typeof": Symbol(react.provider),
            "_context": [Circular],
          },
          "_calculateChangedBits": null,
          "_currentRenderer": Object {},
          "_currentRenderer2": null,
          "_currentValue": Object {
            "descendants": Array [],
            "registerDescendant": [Function],
            "unregisterDescendant": [Function],
          },
          "_currentValue2": Object {
            "descendants": Array [],
            "registerDescendant": [Function],
            "unregisterDescendant": [Function],
          },
          "_threadCount": 0,
          "displayName": "MenuDescendantContext",
        }
      }
      items={Array []}
      set={[Function]}
    >
      <div
        className="nav-link py-0 px-0 status-messages-nav-item__nav-link"
      >
        <MenuButton
          className="btn btn-link"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <button
            aria-controls="menu--14"
            aria-haspopup={true}
            className="btn btn-link"
            data-reach-menu-button=""
            id="menu-button--menu--14"
            onClick={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            type="button"
          >
            <CloudCheckIcon
              className="icon-inline"
              data-tooltip="Repositories up to date"
            />
          </button>
        </MenuButton>
        <MenuPopover
          className="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
        >
          <Popover
            className="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
            data-reach-menu=""
            data-reach-menu-popover=""
            hidden={true}
            targetRef={
              Object {
                "current": <button
                  aria-controls="menu--14"
                  aria-haspopup="true"
                  class="btn btn-link"
                  data-reach-menu-button=""
                  id="menu-button--menu--14"
                  type="button"
                >
                  <cloudcheckicon
                    class="icon-inline"
                    data-tooltip="Repositories up to date"
                  />
                </button>,
              }
            }
          >
            <Portal>
              <Portal
                containerInfo={
                  <reach-portal>
                    <div
                      class="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
                      data-reach-menu=""
                      data-reach-menu-popover=""
                      data-reach-popover=""
                      hidden=""
                      style="position: absolute; left: 0px; top: 0px;"
                    >
                      <h3>
                        Code host status
                      </h3>
                      <div
                        class="status-messages-nav-item__dropdown-menu-content"
                      >
                        <div
                          class="status-messages-nav-item__entry mb-3 status-messages-nav-item__entry--border-warning"
                        >
                          <h4>
                            <cloudalerticon
                              class="icon-inline mr-1"
                            />
                            Syncing repositories failed:
                          </h4>
                          <p>
                            syncer.sync.store.upsert-repos: pg: unique constraint foobar
                          </p>
                          <p
                            class="status-messages-nav-item__entry-link"
                          >
                            <a
                              href="/site-admin/external-services"
                            >
                              Configure synced repositories
                            </a>
                          </p>
                        </div>
                      </div>
                    </div>
                  </reach-portal>
                }
              >
                <PopoverImpl
                  className="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
                  data-reach-menu=""
                  data-reach-menu-popover=""
                  hidden={true}
                  targetRef={
                    Object {
                      "current": <button
                        aria-controls="menu--14"
                        aria-haspopup="true"
                        class="btn btn-link"
                        data-reach-menu-button=""
                        id="menu-button--menu--14"
                        type="button"
                      >
                        <cloudcheckicon
                          class="icon-inline"
                          data-tooltip="Repositories up to date"
                        />
                      </button>,
                    }
                  }
                >
                  <div
                    className="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
                    data-reach-menu=""
                    data-reach-menu-popover=""
                    data-reach-popover=""
                    hidden={true}
                    style={
                      Object {
                        "left": "0px",
                        "position": "absolute",
                        "top": "0px",
                      }
                    }
                  >
                    <h3>
                      Code host status
                    </h3>
                    <div
                      className="status-messages-nav-item__dropdown-menu-content"
                    >
                      <StatusMessagesNavItemEntry
                        entryType="warning"
                        key="0"
                        linkOnClick={[Function]}
                        linkText="Configure synced repositories"
                        linkTo="/site-admin/external-services"
                        showLink={true}
                        text="syncer.sync.store.upsert-repos: pg: unique constraint foobar"
                        title="Syncing repositories failed:"
                      >
                        <div
                          className="status-messages-nav-item__entry mb-3 status-messages-nav-item__entry--border-warning"
                          key="syncer.sync.store.upsert-repos: pg: unique constraint foobar"
                        >
                          <h4>
                            <CloudAlertIcon
                              className="icon-inline mr-1"
                            />
                            Syncing repositories failed:
                          </h4>
                          <p>
                            syncer.sync.store.upsert-repos: pg: unique constraint foobar
                          </p>
                          <p
                            className="status-messages-nav-item__entry-link"
                          >
                            <AnchorLink
                              onClick={[Function]}
                              to="/site-admin/external-services"
                            >
                              <a
                                href="/site-admin/external-services"
                                onClick={[Function]}
                              >
                                Configure synced repositories
                              </a>
                            </AnchorLink>
                          </p>
                        </div>
                      </StatusMessagesNavItemEntry>
                    </div>
                  </div>
                </PopoverImpl>
              </Portal>
            </Portal>
          </Popover>
        </MenuPopover>
      </div>
    </DescendantProvider>
  </Menu>
</StatusMessagesNavItem>
`;
